--- a/src/stylesheet/modules/_form.scss
+++ b/src/stylesheet/modules/_form.scss
@@ -28,7 +28,7 @@
       }
       .msg-error {
         @include pxRem(margin-top, 8);
-        @include pxRem(padding, 0.5 10);
+        @include pxRem(padding, 0 10);
         position: relative;
         display: block;
         border-radius: 5px;
@@ -50,6 +50,13 @@
       select {
         &.form-control {
           @include pxRem(padding, 14 12);
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+          background-repeat: no-repeat;
+          background-position-x: 100%;
+          background-position-y: 9px;
+          background-repeat: no-repeat;
         }
       }
       .form-control:focus ~ .form-label {
